--- a/app/views/rosters/new.html.erb
+++ b/app/views/rosters/new.html.erb
@@ -7,11 +7,6 @@
     <%=form_tag '/rosters', method: :post do %>
 
       <div class="input-group">
-        <%=label_tag :user_id %>
-        <%=text_field_tag :user_id, nil, class: "form-control" %>
-      </div>
-
-      <div class="input-group">
         <%=label_tag :team_name %>
         <%=text_field_tag :team_name, nil, class: "form-control" %>
       </div>
@@ -23,7 +18,7 @@
 
       <div class="input-group">
         <%=label_tag "QB 2: " %>
-        <%= collection_select :qb_2, :qb_2_id, Player.where(position: "QB"), :id, :name_and_team,  prompt: "Please Select" %>
+        <%= collection_select :qb_2, :qb_2_id, Player.where(position: "QB"), :id, :name_and_team,  {prompt: "Please Select"}, {:onchange => "alert('hello')" } %>
       </div>
 
       <div class="input-group">
@@ -78,7 +73,7 @@
 
       <div class="input-group">
         <%=label_tag "Flex: " %>
-        <%= collection_select :flex_1, :flex_1_id, Player.where(position: "FLEX"), :id, :name_and_team,  prompt: "Please Select" %>
+        <%= collection_select :flex_1, :flex_1_id, Player.where("position = ? OR position = ?", "RB", "WR"), :id, :name_and_team,  prompt: "Please Select" %>
       </div>
   
       <div>
