--- a/app/views/rosters/index.html.erb
+++ b/app/views/rosters/index.html.erb
@@ -4,6 +4,12 @@
 <% end %>
 </h1>
 
+<div ng-app="app">
+  <div ng-controller="rosterCtrl" ng-init="setup()">
+    {{ 1 + 1 }}
+  </div>
+</div>
+
 <table class="table">
   <tr>
     <th>ROSTER NAME</th>
