--- a/app/views/rosters/index.html.erb
+++ b/app/views/rosters/index.html.erb
@@ -5,7 +5,7 @@
 </h1>
 
 <div ng-app="app">
-  <div ng-controller="rosterCtrl" ng-init="setup()">
+  <div ng-controller="playerCtrl" ng-init="setup()">
     {{ 1 + 1 }}
   </div>
 </div>
