--- a/app/views/rosters/new.html.erb
+++ b/app/views/rosters/new.html.erb
@@ -5,14 +5,27 @@
   <div ng-app="app">
     <div ng-controller="playerCtrl" ng-init="setup()">
 
-      <label>QB 1: 
-        <select ng-model="qb_1" ng-options="player.name disable when player.isSelected for player in qb"></select>
-      </label>
+      <!-- QUARTERBACK SELECTION -->
+      <div data-ng-repeat="rosteredPlayer in rosteredQBs">
+        <label>QB: </label>
+        <select data-ng-options="player.name disable when isDisabled(player, rosteredPlayer, rosteredQBs) for player in QBs" data-ng-model="rosteredQBs[$index]"></select>
+      </div>
+      <p>{{rosteredQBs}}</p>
 
-      <label>QB 2: 
-        <select ng-model="qb_2" ng-options="player.name disable when player.isSelected for player in qb"></select>
-      </label>
-  
+      <!-- RUNNINGBACK SELECTION -->
+      <div data-ng-repeat="rosteredPlayer in rosteredRBs">
+        <label>RB: </label>
+        <select data-ng-options="player.name disable when isDisabled(player, rosteredPlayer, rosteredRBs) for player in RBs" data-ng-model="rosteredRBs[$index]"></select>
+      </div>
+      <p>{{rosteredRBs}}</p>
+
+      <!-- WIDERECEIVER SELECTION -->
+      <div data-ng-repeat="rosteredPlayer in rosteredWRs">
+        <label>WR: </label>
+        <select data-ng-options="player.name disable when isDisabled(player, rosteredPlayer, rosteredWRs) for player in WRs" data-ng-model="rosteredWRs[$index]"></select>
+      </div>
+      <p>{{rosteredWRs}}</p>
+
     </div>
   </div>
 
