added functions to disable the selection of multiple players from the same team

--- a/app/views/rosters/new.html.erb
+++ b/app/views/rosters/new.html.erb
@@ -5,6 +5,8 @@
   <div ng-app="app">
     <div ng-controller="playerCtrl" ng-init="setup()">
 
+      <p>{{activeTeamList}}</p>
+
       <!-- QUARTERBACK SELECTION -->
       <div data-ng-repeat="rosteredPlayer in rosteredQBs">
         <label>QB: </label>
